--- a/landingPage.html
+++ b/landingPage.html
@@ -8,17 +8,16 @@
 
 <body>
   <div id="navbar">
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
+    <a href='https://skitch518.github.io/bioSite/landingPage'>Home</a>
+    <a href='https://skitch518.github.io/bioSite/About'>About</a>
+    <a href='https://skitch518.github.io/bioSite/landingPage'>Contact</a>
   </div>
 
   <div class="heroImage">
-    <img src="images/retirement.jpg" alt="Retirement Image">
+    <img src="images/retirementResize.jpg" alt="Retirement Image">
   </div>
 
-  <h1>Welcome to My BioSite</h1>
-
+   <h1>Welcome to My BioSite</h1>
   <div class="image-gallery">
     <div class="left_div">
       <figure>
@@ -29,7 +28,7 @@
 
     <div class="center_div">
       <figure>
-        <img src="images/hiking.jpg" alt="Hiking">
+        <img src="images/hikingSmall.jpg" alt="Hiking">
         <figcaption>Hobbies</figcaption>
       </figure>
     </div>
@@ -43,7 +42,7 @@
   </div>
 
   <footer>
-    <a href="https://skitch518.github.io/csd-340/">Home</a>
+    <a href="https://skitch518.github.io/bioSite/landingPage">Home</a>
   </footer>
 
 </body>
