--- a/About.html
+++ b/About.html
@@ -15,7 +15,7 @@
  <h1>About</h1>
 </div>
 <footer>
-<a href="https://skitch518.github.io/csd-340/">Home</a>
+<a href="https://skitch518.github.io/bioSite/landingPage.html/">Home</a>
 </footer>
 
 </body>
