--- a/landingPage.html
+++ b/landingPage.html
@@ -8,9 +8,9 @@
 
 <body>
   <div id="navbar">
-    <a href='https://skitch518.github.io/bioSite/landingPage'>Home</a>
-    <a href='https://skitch518.github.io/bioSite/About'>About</a>
-    <a href='https://skitch518.github.io/bioSite/landingPage'>Contact</a>
+    <a href='https://skitch518.github.io/bioSite/landingPage.html'>Home</a>
+    <a href='https://skitch518.github.io/bioSite/About.html'>About</a>
+    <a href='https://skitch518.github.io/bioSite/landingPage.html'>Contact</a>
   </div>
 
   <div class="heroImage">
@@ -42,7 +42,7 @@
   </div>
 
   <footer>
-    <a href="https://skitch518.github.io/bioSite/landingPage">Home</a>
+    <a href="https://skitch518.github.io/bioSite/landingPage.html">Home</a>
   </footer>
 
 </body>
