copying fix to othe links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div id="navbar">
-    <a href='https://skitch518.github.io/bioSite/landingPage.html'>Home</a>
+    <a href='https://skitch518.github.io/bioSite'>Home</a>
     <a href='https://skitch518.github.io/bioSite/About.html'>About</a>
     <a href='https://skitch518.github.io/bioSite/landingPage.html'>Contact</a>
   </div>
