--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="heroImage">
-    <img src="images/retirementResize.jpg" alt="Retirement Image">
+    <img src="images/hero.jpg" alt="Retirement Image">
   </div>
 
    <h1>Welcome to My BioSite</h1>
