--- a/index.html
+++ b/index.html
@@ -20,17 +20,21 @@
    <h1>Welcome to My BioSite</h1>
   <div class="image-gallery">
     <div class="left_div">
-      <figure>
+      <a href='https://skitch518.github.io/bioSite/About.html'>
+       <figure>
         <img src="images/profile.jpg" alt="Profile Picture">
         <figcaption>About</figcaption>
       </figure>
+     </a>
     </div>
 
     <div class="center_div">
-      <figure>
+      <a href = 'https://skitch518.github.io/bioSite/Hobbies.html'>
+       <figure>
         <img src="images/hikingSmall.jpg" alt="Hiking">
         <figcaption>Hobbies</figcaption>
       </figure>
+     </a>
     </div>
 
     <div class="right_div">
