--- a/About.html
+++ b/About.html
@@ -13,6 +13,15 @@
 
 <div class="bio">
  <h1>About</h1>
+ <p> Robert Burke is a native of upstate New York, where he graduated from Johnstown High School before enlisting in the U.S. Air Force. After serving with distinction, Robert transferred to the Washington State Air National Guard, a decision inspired by his family's love for the Pacific Northwest. He proudly retired after 23 years of dedicated service.​</p>
+
+ <p>Throughout his military career, Robert balanced the demands of service with academic achievement, earning a Master’s in Public Administration while maintaining a 40-hour work week and supporting his family. This accomplishment remains a source of immense pride for him, not only for the challenge it presented but also for the doors it opened professionally.​</p>
+
+ <p>The highlight of Robert’s military career was his achievement of a senior leadership role—something that didn’t come naturally to him at first but became a defining accomplishment. Overcoming the challenges of leadership development shaped his personal and professional growth.​</p>
+
+ <p>After retiring, Robert moved to Tennessee to be closer to his parents and took on a role as a warranted contracting officer with the Department of Energy. He is currently in a temporary position as a Systems Analyst, with a long-term goal of excelling in this role and securing a permanent position that offers opportunities for leadership advancement.​</p>
+
+ <p>Outside of work, Robert enjoys outdoor activities like hiking and archery, which help him relax and reconnect with nature. His hobby of reading has been essential in honing his leadership and organizational skills, as he firmly believes that learning is a lifelong pursuit.​</p>
 </div>
 <footer>
 <a href="https://skitch518.github.io/bioSite">Home</a>
