--- a/ImageGallery.html
+++ b/ImageGallery.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <h1>Image Gallery</h1>
-<link rel="stylesheet" href="bioSite.css">
+    <title>Image Gallery</title>
+    <link rel="stylesheet" href="bioSite.css">
 </head>
 <body>
-<div class="gallery">
+    <h1>Image Gallery</h1>
+    <div class="gallery">
         <img src="images/family.jpg" alt="Family">
         <img src="images/hiking.jpg" alt="Hiking">
         <img src="images/profile.jpg" alt="Profile">
