--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
     </div>
 
     <div class="right_div">
-      <figure>
+      <a href = 'https://skitch518.github.io/bioSite/ImageGallery.html'>
+       <figure>
         <img src="images/family.jpg" alt="Family">
         <figcaption>Images</figcaption>
       </figure>
+     </a>
     </div>
   </div>
 
