adding contact page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="navbar">
     <a href='https://skitch518.github.io/bioSite'>Home</a>
     <a href='https://skitch518.github.io/bioSite/About.html'>About</a>
-    <a href='https://skitch518.github.io/bioSite/landingPage.html'>Contact</a>
+    <a href='https://skitch518.github.io/bioSite/Contact.html'>Contact</a>
   </div>
 
   <div class="heroImage">
@@ -48,7 +48,7 @@
   </div>
 
   <footer>
-    <a href="https://skitch518.github.io/bioSite/landingPage.html">Home</a>
+    <a href="https://skitch518.github.io/bioSite">Home</a>
   </footer>
 
 </body>
