--- a/ImageGallery.html
+++ b/ImageGallery.html
@@ -6,13 +6,35 @@
 </head>
 <body>
     <h1>Image Gallery</h1>
-    <div class="gallery">
-        <img src="images/family.jpg" alt="Family">
-        <img src="images/hiking.jpg" alt="Hiking">
-        <img src="images/profile.jpg" alt="Profile">
-        <img src="images/archery2.jpg" alt="Archery">
-        <img src="images/graduation.jpg" alt="Graduation">
-        <img src="images/hero.jpg" alt="Retirement">
+    
+    <div class="gallery-container">
+        <div class="gallery-item top-left">
+            <img src="images/family.jpg" alt="Family">
+        </div>
+
+        <div class="gallery-item top-right">
+            <img src="images/hiking.jpg" alt="Hiking">
+        </div>
+
+        <div class="gallery-item middle-left">
+            <img src="images/profile.jpg" alt="Profile">
+        </div>
+
+        <div class="gallery-item middle-right">
+            <img src="images/archery2.jpg" alt="Archery">
+        </div>
+
+        <div class="gallery-item bottom-left">
+            <img src="images/graduation.jpg" alt="Graduation">
+        </div>
+
+        <div class="gallery-item bottom-right">
+            <img src="images/hero.jpg" alt="Retirement">
+        </div>
     </div>
+<footer>
+<a href="https://skitch518.github.io/csd-340/">Home</a>
+</footer>
+
 </body>
 </html>
