--- a/Hobbies.html
+++ b/Hobbies.html
@@ -42,7 +42,7 @@
 
   </div>
 <footer>
-<a href="https://skitch518.github.io/csd-340/">Home</a>
+<a href="https://skitch518.github.io/bioSite">Home</a>
 </footer>
 
 </body>
