--- a/ImageGallery.html
+++ b/ImageGallery.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 <footer>
-<a href="https://skitch518.github.io/csd-340/">Home</a>
+<a href="https://skitch518.github.io/bioSite/">Home</a>
 </footer>
 
 </body>
