--- a/Hobbies.html
+++ b/Hobbies.html
@@ -13,13 +13,13 @@
   </div>
 
   <div id= "topRight">
-  <h2>Header Goes Here</h2>
-  <p> Text Goes Here </p>
+  <h2>Hiking</h2>
+  <p> My hobby of hiking helps me escape life's stresses and allows me to appreciate nature. It gives me a chance to disconnect, clear my mind, and find peace in the beauty of the outdoors.</p>
   </div>
 
   <div id= "midLeft">
   
-  <p> Text Goes Here </p>
+  <p> I first tried archery as a kid in Boy Scouts, but it wasn’t until 2022 that I decided to pursue it as a hobby. I chose archery as an alternative to shooting guns, something I was proficient at from my years in the service.</p>
  
   </div>
 
@@ -38,7 +38,7 @@
 
   <div id = "bottomRight">
 
-   <p> Text Goes Here </p>
+   <p> Spending time on my hobbies, especially in nature, helps me recharge mentally, allowing me to stay sharp in both my personal and professional life. </p>
 
   </div>
 <footer>
