--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <a href = 'https://skitch518.github.io/bioSite/ImageGallery.html'>
        <figure>
         <img src="images/family.jpg" alt="Family">
-        <figcaption>Images</figcaption>
+        <figcaption>Image Gallery</figcaption>
       </figure>
      </a>
     </div>
