--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="images/hero3.jpg" alt="Retirement Image">
   </div>
 
-   <h1>Welcome to My BioSite</h1>
+   <h1>The Story of Robert Burke</h1>
   <div class="image-gallery">
     <div class="left_div">
       <a href='https://skitch518.github.io/bioSite/About.html'>
