--- a/Contact.html
+++ b/Contact.html
@@ -9,8 +9,9 @@
     <p>123 Main st</p>
     <p>Random Town, XY 12345 </p>
     <p>email: example_email@gmail.com</p>
-    <p>linkedIn: https://www.linkedin.com/in/jason-schriner-2580662aa/</p>
-    <p>discord: https://discord.gg/gp4jp9xh</p>
+    <p>linkedIn: <a href="https://www.linkedin.com/in/jason-schriner-2580662aa/">https://www.linkedin.com/in/jason-	schriner-2580662aa/</a></p>
+    <p>discord: <a href="https://discord.gg/f4prvHDP">https://discord.gg/f4prvHDP</a></p>
+
 
  <footer>
     <a href="https://skitch518.github.io/bioSite">Home</a>
