Adding dns section to website

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="hero-content fade-in">
                     <div class="hero-text">
                         <h1>Software Development Student</h1>
-                        <p class="subtitle">Building robust infrastructure from the ground up</p>
+                        <p class="subtitle">Software Development Senior at Bellevue University</p>
                         <p class="description">
                             Welcome to my corner of the internet! This very website runs on my home 
 			    infrastructure, powered by Raspberry Pi technology and custom DNS solutions.
@@ -77,19 +77,16 @@
                         <h3>Home DNS Server with Raspberry Pi</h3>
                         <p>
                             Built a complete home DNS infrastructure using Raspberry Pi, featuring Pi-hole for ad-blocking, 
-                            custom DNS records for local services, and failover mechanisms. Reduced network latency by 40% 
-                            and blocked over 1M+ ads monthly.
+                            custom DNS records for local services, and failover mechanisms. 
                         </p>
                         <div class="tech-stack">
                             <span class="tech-tag">Raspberry Pi</span>
                             <span class="tech-tag">Pi-hole</span>
-                            <span class="tech-tag">BIND9</span>
-                            <span class="tech-tag">Docker</span>
                             <span class="tech-tag">Linux</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">📖 Read Guide</a>
-                            <a href="#" class="project-link">⚙️ View Config</a>
+                            <a href="dns.html" class="project-link">📖 Read Guide</a>
+                            <a href="#" class="project-link">📷 View Photos</a>
                         </div>
                     </div>
 
@@ -101,11 +98,9 @@
                             monitoring, and backup systems. Features custom domain routing and dynamic DNS updates.
                         </p>
                         <div class="tech-stack">
-                            <span class="tech-tag">Nginx</span>
-                            <span class="tech-tag">Let's Encrypt</span>
-                            <span class="tech-tag">Cloudflare</span>
-                            <span class="tech-tag">Docker Compose</span>
-                            <span class="tech-tag">Bash</span>
+                            <span class="tech-tag">Java</span>
+                            <span class="tech-tag">Json</span>
+                            <span class="tech-tag">JSP</span>
                         </div>
                         <div class="project-links">
                             <a href="#" class="project-link">📖 Read Guide</a>
@@ -175,6 +170,13 @@
                 </div>
             </div>
         </section>
+      <!-- Achievements Section -->
+      <section id="achievements" class="section">
+        <div class="container">
+           <h2>Academic Achievements</h2>
+           <img src="SmallLogo.png" alt="Omega Nu Lambda">
+        </div>
+
 
         <!-- Contact Section -->
         <section id="contact" class="section">
