Adding deans list photos

--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
         <div class="container">
            <h2>Academic Achievements</h2>
            <img src="SmallLogo.png" alt="Omega Nu Lambda">
+           <img src="deansListSpring.png" alt="Deans List Spring">           
+           <img src="deansListFall.png" alt="Deans List Fall">          
         </div>
 
 
