Edited dns.html to reflect steps i took

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                             <span class="tech-tag">Raspberry Pi</span>
                             <span class="tech-tag">Pi-hole</span>
                             <span class="tech-tag">Linux</span>
+                            <span class="tech-tag">UFW</span>
+                            <span class="tech-tag">Proton VPN</span>
                         </div>
                         <div class="project-links">
                             <a href="dns.html" class="project-link">📖 Read Guide</a>
