--- a/dns.html
+++ b/dns.html
@@ -10,29 +10,14 @@
     <div class="container">
         <div class="guide-header">
             <h1>🏠 Home DNS Server with Raspberry Pi</h1>
-            <p class="subtitle">Complete Infrastructure Setup with Pi-hole, Custom DNS, and Failover</p>
-            <div class="difficulty-level">Intermediate Level</div>
+            <p class="subtitle">Walkthrough of my DNS Project</p>
         </div>
 
-        <div class="guide-content">
-            <div class="toc">
-                <h3>📋 Table of Contents</h3>
-                <ul>
-                    <li><a href="#overview">1. Project Overview</a></li>
-                    <li><a href="#requirements">2. Requirements & Hardware</a></li>
-                    <li><a href="#setup">3. Initial Raspberry Pi Setup</a></li>
-                    <li><a href="#pihole">4. Pi-hole Installation & Configuration</a></li>
-                    <li><a href="#dns">5. Custom DNS Records</a></li>
-                    <li><a href="#failover">6. Failover Configuration</a></li>
-                    <li><a href="#monitoring">7. Monitoring & Maintenance</a></li>
-                    <li><a href="#troubleshooting">8. Troubleshooting</a></li>
-                </ul>
-            </div>
-
-            <section id="overview" class="section">
+        <section id="projects" class="section">
+            <div class="project-card">
                 <h2>🎯 Project Overview</h2>
-                <p>This guide will walk you through building a complete home DNS infrastructure using a Raspberry Pi. You'll learn how to set up Pi-hole for network-wide ad blocking, configure custom DNS records for your local services, and implement failover mechanisms for high availability.</p>
-                
+                <p>This is meant to detail the steps I took to setup a DNS on a Raspberry pi</p>
+
                 <div class="architecture-diagram">
                     <h4>🏗️ Network Architecture</h4>
                     <p><strong>Internet</strong> ↔ <strong>Router</strong> ↔ <strong>Raspberry Pi DNS Server</strong> ↔ <strong>Home Devices</strong></p>
@@ -47,105 +32,68 @@
                     <li><strong>Detailed Analytics:</strong> Monitor DNS queries and blocked content</li>
                     <li><strong>Low Power Consumption:</strong> Runs 24/7 on minimal electricity</li>
                 </ul>
-            </section>
+            </div>
+        </section>
 
-            <section id="requirements" class="section">
-                <h2>🛠️ Requirements & Hardware</h2>
-                
+        <section id="projects" class="section">
+            <div class="project-card">
+                <h2>🛠️ Project Hardware</h2>
+
                 <div class="requirements">
-                    <h4>Hardware Requirements</h4>
+                    <h4>Hardware</h4>
                     <ul>
-                        <li>Raspberry Pi 4 (2GB RAM minimum, 4GB recommended)</li>
-                        <li>MicroSD card (32GB Class 10 or better)</li>
-                        <li>Ethernet cable (recommended for stability)</li>
+                        <li>Raspberry Pi 5 8GB ram</li>
+                        <li>32gb MicroSD card</li>
+                        <li>1TB NVME SSD PCIe</li>
                         <li>Power supply (official Raspberry Pi power adapter)</li>
-                        <li>Case with cooling (optional but recommended)</li>
+                        <li>Pironman 5 NVMe M.2 SSD PCIe Mini PC Case</li>
                     </ul>
                 </div>
 
                 <div class="requirements">
-                    <h4>Software Requirements</h4>
+                    <h4>Software Used</h4>
                     <ul>
-                        <li>Raspberry Pi OS Lite (latest version)</li>
-                        <li>SSH client (PuTTY, Terminal, or PowerShell)</li>
-                        <li>Raspberry Pi Imager</li>
-                        <li>Basic Linux command line knowledge</li>
+                        <li>Raspberry Pi-hole</li>
+                        <li>UFW</li>
+                        <li>Proton VPN</li>
                     </ul>
                 </div>
+            </div>
+        </section>
 
-                <div class="tip">
-                    <strong>Pro Tip:</strong> Use a wired connection for your DNS server to ensure maximum stability and lowest latency for DNS queries.
-                </div>
-            </section>
-
-            <section id="setup" class="section">
+        <section id="projects" class="section">
+            <div class="project-card">
                 <h2>🚀 Initial Raspberry Pi Setup</h2>
 
-                <h3><span class="step-counter">1</span>Prepare the SD Card</h3>
-                <p>Download and install Raspberry Pi Imager, then flash Raspberry Pi OS Lite to your SD card.</p>
+                <h3><span class="step-counter">1 </span>Built case and installed NVME</h3>
+                <p>Prepared the Raspberry Pi 5
+                Ensured the Raspberry Pi 5 was free from thermal pads, heatsinks, or HATs. Inserted the CR1220 battery into the RTC holder. Connected the PCIe and RTC battery cables, noting the orientation of the FPC PCIe cable.</p>
 
-                <div class="code-block">
-# Enable SSH and configure WiFi (if needed) before first boot
-# Create ssh file in boot partition
-touch /boot/ssh
+                <div class="code-block"></div>
 
-# Configure WiFi (create wpa_supplicant.conf in boot partition)
-country=US
-ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
-update_config=1
+                <h3><span class="step-counter">2 </span>Installed the Power Button</h3>
+                <p>Mounted the power button in the case and connect it to the Raspberry Pi 5 using the provided cables.</p>
+                <div class="code-block"></div>
 
-network={
-    ssid="YourWiFiName"
-    psk="YourWiFiPassword"
-}
-                </div>
+                <h3><span class="step-counter">3 </span>Attached the Tower Cooler</h3>
+                <p>Applied thermal pads to the BCM2712 SoC, wireless module, and VLI chip on the Raspberry Pi 5. Installed the tower cooler using the provided plastic bits with springs. Connected the 4-pin fan wire to the fan connector on the Raspberry Pi 5.</p>
+                <div class="code-block"></div>
 
-                <h3><span class="step-counter">2</span>Initial Configuration</h3>
-                <p>Boot your Raspberry Pi and connect via SSH. Run the configuration tool:</p>
+                <h3><span class="step-counter">4 </span>Installed the M.2 SSD</h3>
+                <p>I used a NVMe SSD, installed the stud in the appropriate location 2242. Secured the SSD in the M.2 M key slot and fastened it with screws. Connected the SSD to the PCIe adapter board.</p>
+                <div class="code-block"></div>
 
-                <div class="code-block">
-sudo raspi-config
-                </div>
+                <h3><span class="step-counter">5 </span>Assembled the Case</h3>
+                <p>Installed the two fans with dust filters into the case. Attached the acrylic plate to the IO HAT+ after removing protective films. Connected the fans and OLED display. Inserted the IO HAT+ into the 40-pin GPIO header of the Raspberry Pi 5. Secured both metal parts of the case together. Installed the remaining acrylic plates and secured them with screws.</p>
+            </div>
+        </section>
 
-                <p>Configure the following:</p>
-                <ul>
-                    <li>Change default password</li>
-                    <li>Enable SSH (if not already enabled)</li>
-                    <li>Set timezone</li>
-                    <li>Expand filesystem</li>
-                    <li>Set hostname (e.g., "dns-server")</li>
-                </ul>
-
-                <h3><span class="step-counter">3</span>Update System</h3>
-                <div class="code-block">
-sudo apt update && sudo apt upgrade -y
-sudo reboot
-                </div>
-
-                <h3><span class="step-counter">4</span>Set Static IP Address</h3>
-                <p>Edit the dhcpcd configuration:</p>
-
-                <div class="code-block">
-sudo nano /etc/dhcpcd.conf
-
-# Add these lines at the end (adjust for your network):
-interface eth0
-static ip_address=192.168.1.100/24
-static routers=192.168.1.1
-static domain_name_servers=1.1.1.1 8.8.8.8
-                </div>
-
-                <div class="warning">
-                    <strong>Important:</strong> Choose an IP address outside your router's DHCP range to avoid conflicts.
-                </div>
-            </section>
-
-            <section id="pihole" class="section">
+        <section id="projects" class="section">
+            <div class="project-card">
                 <h2>🕳️ Pi-hole Installation & Configuration</h2>
 
-                <h3><span class="step-counter">1</span>Install Pi-hole</h3>
-                <p>Run the automated installer:</p>
-
+                <h3><span class="step-counter">1 </span>Installed Pi-hole</h3>
+                <p>Ran the automated installer:</p>
                 <div class="code-block">
 curl -sSL https://install.pi-hole.net | bash
                 </div>
@@ -164,7 +112,7 @@ curl -sSL https://install.pi-hole.net | bash
                     <strong>Note:</strong> Save the admin password displayed at the end of installation!
                 </div>
 
-                <h3><span class="step-counter">2</span>Configure Router DNS Settings</h3>
+                <h3><span class="step-counter">2 </span>Configured Router DNS Settings</h3>
                 <p>Update your router's DNS settings to point to your Pi-hole server:</p>
                 <ul>
                     <li>Primary DNS: 192.168.1.100 (your Pi-hole IP)</li>
@@ -179,215 +127,20 @@ curl -sSL https://install.pi-hole.net | bash
                     <p><strong>Blacklist:</strong> <code>/etc/pihole/blacklist.txt</code></p>
                 </div>
 
-                <h3><span class="step-counter">3</span>Access Web Interface</h3>
-                <p>Open your browser and navigate to:</p>
+                <h3><span class="step-counter">3 </span>Accessed Web Interface</h3>
+                <p>navigated to:</p>
                 <div class="code-block">
-http://192.168.1.100/admin
+                 http://192.168.1.100/admin
                 </div>
-
-                <p>Login with the password from installation and explore the dashboard.</p>
-            </section>
-
-            <section id="dns" class="section">
-                <h2>🏷️ Custom DNS Records</h2>
-
-                <h3><span class="step-counter">1</span>Add Local DNS Records</h3>
-                <p>Create custom DNS entries for your local services:</p>
-
-                <div class="code-block">
-sudo nano /etc/pihole/custom.list
-
-# Add entries in format: IP_ADDRESS DOMAIN_NAME
-192.168.1.150 homeserver.local
-192.168.1.151 nas.local
-192.168.1.152 camera.local
-192.168.1.153 printer.local
-                </div>
-
-                <h3><span class="step-counter">2</span>Restart DNS Service</h3>
-                <div class="code-block">
-sudo pihole restartdns
-                </div>
-
-                <h3><span class="step-counter">3</span>Test Custom DNS</h3>
-                <div class="code-block">
-nslookup homeserver.local 192.168.1.100
-                </div>
-
-                <div class="tip">
-                    <strong>Pro Tip:</strong> Use the Pi-hole web interface to add custom DNS records through the GUI for easier management.
-                </div>
-            </section>
-
-            <section id="failover" class="section">
-                <h2>🔄 Failover Configuration</h2>
-
-                <h3><span class="step-counter">1</span>Configure Unbound as Recursive DNS</h3>
-                <p>Install Unbound for better privacy and performance:</p>
-
-                <div class="code-block">
-sudo apt install unbound
-
-# Configure Unbound
-sudo nano /etc/unbound/unbound.conf.d/pi-hole.conf
-                </div>
-
-                <div class="config-section">
-                    <h4>Unbound Configuration</h4>
-                    <div class="code-block">
-server:
-    verbosity: 0
-    interface: 127.0.0.1
-    port: 5335
-    do-ip4: yes
-    do-udp: yes
-    do-tcp: yes
-    do-ip6: no
-    do-daemonize: yes
-    access-control: 127.0.0.1/32 allow
-    hide-identity: yes
-    hide-version: yes
-    harden-glue: yes
-    harden-dnssec-stripped: yes
-    cache-min-ttl: 3600
-    cache-max-ttl: 86400
-    prefetch: yes
-    num-threads: 1
-                    </div>
-                </div>
-
-                <h3><span class="step-counter">2</span>Set Up DNS Monitoring</h3>
-                <p>Create a monitoring script:</p>
-
-                <div class="code-block">
-sudo nano /home/pi/dns-monitor.sh
-
-#!/bin/bash
-# DNS Health Check Script
-PRIMARY_DNS="127.0.0.1"
-BACKUP_DNS="1.1.1.1"
-TEST_DOMAIN="google.com"
-
-if ! nslookup $TEST_DOMAIN $PRIMARY_DNS > /dev/null 2>&1; then
-    echo "$(date): Primary DNS failed, switching to backup" >> /var/log/dns-monitor.log
-    # Add failover logic here
-fi
-                </div>
-
-                <div class="code-block">
-chmod +x /home/pi/dns-monitor.sh
-
-# Add to crontab for regular checks
-crontab -e
-# Add: */5 * * * * /home/pi/dns-monitor.sh
-                </div>
-
-                <h3><span class="step-counter">3</span>Configure Multiple DNS Servers</h3>
-                <p>Set up your router with multiple DNS servers for redundancy:</p>
-                <ul>
-                    <li>Primary DNS: 192.168.1.100 (Pi-hole)</li>
-                    <li>Secondary DNS: 1.1.1.1 (Cloudflare)</li>
-                    <li>Tertiary DNS: 8.8.8.8 (Google)</li>
-                </ul>
-            </section>
-
-            <section id="monitoring" class="section">
-                <h2>📊 Monitoring & Maintenance</h2>
-
-                <h3><span class="step-counter">1</span>Pi-hole Dashboard</h3>
-                <p>Monitor your DNS server through the web interface:</p>
-                <ul>
-                    <li>Query statistics and trends</li>
-                    <li>Top blocked domains</li>
-                    <li>Query types and client activity</li>
-                    <li>Blacklist and whitelist management</li>
-                </ul>
-
-                <h3><span class="step-counter">2</span>Log Analysis</h3>
-                <div class="code-block">
-# View Pi-hole logs
-sudo tail -f /var/log/pihole.log
-
-# View DNS query logs
-sudo tail -f /var/log/pihole-FTL.log
-
-# System logs
-sudo journalctl -u pihole-FTL -f
-                </div>
-
-                <h3><span class="step-counter">3</span>Regular Maintenance Tasks</h3>
-                <ul>
-                    <li>Update Pi-hole: <code>pihole -up</code></li>
-                    <li>Update system: <code>sudo apt update && sudo apt upgrade</code></li>
-                    <li>Monitor SD card health</li>
-                    <li>Backup configurations regularly</li>
-                    <li>Review and update block lists</li>
-                </ul>
-
-                <div class="tip">
-                    <strong>Automation Tip:</strong> Set up automatic updates and backups using cron jobs for hands-off maintenance.
-                </div>
-            </section>
-
-            <section id="troubleshooting" class="section">
-                <h2>🔧 Troubleshooting</h2>
-
-                <h3>Common Issues and Solutions</h3>
-
-                <div class="warning">
-                    <strong>DNS Not Working:</strong>
-                    <ul>
-                        <li>Check if Pi-hole service is running: <code>sudo systemctl status pihole-FTL</code></li>
-                        <li>Verify network connectivity: <code>ping 8.8.8.8</code></li>
-                        <li>Confirm router DNS settings</li>
-                        <li>Check firewall rules</li>
-                    </ul>
-                </div>
-
-                <div class="warning">
-                    <strong>Web Interface Not Accessible:</strong>
-                    <ul>
-                        <li>Restart lighttpd: <code>sudo systemctl restart lighttpd</code></li>
-                        <li>Check if port 80 is open: <code>sudo netstat -tulpn | grep :80</code></li>
-                        <li>Verify Pi-hole installation</li>
-                    </ul>
-                </div>
-
-                <h3>Useful Commands</h3>
-                <div class="code-block">
-# Pi-hole status
-pihole status
-
-# Restart Pi-hole
-sudo systemctl restart pihole-FTL
-
-# Flush DNS cache
-pihole flushdb
-
-# Tail logs
-pihole -t
-
-# Check Pi-hole version
-pihole version
-
-# Repair Pi-hole
-pihole -r
-                </div>
-
-                <h3>Performance Optimization</h3>
-                <ul>
-                    <li>Increase query cache size in Pi-hole settings</li>
-                    <li>Use SSD instead of SD card for better performance</li>
-                    <li>Optimize block lists (remove duplicate entries)</li>
-                    <li>Configure log rotation to prevent disk space issues</li>
-                </ul>
-            </section>
-
-            <div class="nav-buttons">
-                <a href="index.html" class="nav-button prev">← Back to Projects</a>
-                <a href="#" class="nav-button next">View Configuration Files →</a>
+                <p>Logged in with the password from installation and explored the dashboard.</p>
             </div>
+        </section>
+
+        <div class="nav-buttons">
+            <a href="index.html" class="nav-button prev">← Back to Projects</a>
+            <a href="#" class="nav-button next">View Configuration Files →</a>
         </div>
+
     </div>
 </body>
 </html>
