Adding a page to post photos of me setting up the dns

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                             <span class="tech-tag">Proton VPN</span>
                         </div>
                         <div class="project-links">
-                            <a href="dns.html" class="project-link">📖 Read Guide</a>
-                            <a href="#" class="project-link">📷 View Photos</a>
+                            <a href="dns.html" class="project-link">📖 Project Guide</a>
+                            <a href="dnsPhotos.html" class="project-link">📷 View Photos</a>
                         </div>
                     </div>
 
