Pusing webGuide.html page

--- a/dnsPhotos.html
+++ b/dnsPhotos.html
@@ -37,8 +37,10 @@
           <!-- Add more photo-item blocks here -->
         </div>
 
-        <div style="margin-top: 2rem;">
-          <a href="index.html#projects" class="btn btn-secondary">⬅ Back to Projects</a>
+        <div class="nav-buttons">
+            <a href="index.html" class="nav-button prev">← Back to Projects</a>
+        </div>
+
         </div>
       </div>
     </section>
