--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <span class="tech-tag">JSP</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">📖 Read Guide</a>
+                            <a href="webGuide.html" class="project-link">📖 Setup Guide</a>
                             <a href="#" class="project-link">💻 Source Code</a>
                         </div>
                     </div>
