--- a/webGuide.html
+++ b/webGuide.html
@@ -126,7 +126,7 @@
         </section>
 
         <div class="nav-buttons">
-            <a href="index.html" class="nav-button prev">← Back to Projects</a>
+            <a href="index.html" class="nav-button prev">← Home</a>
         </div>
     </div>
 </body>
