Editing home link

--- a/dns.html
+++ b/dns.html
@@ -137,7 +137,7 @@ curl -sSL https://install.pi-hole.net | bash
         </section>
 
         <div class="nav-buttons">
-            <a href="index.html" class="nav-button prev">← Back to Projects</a>
+            <a href="index.html" class="nav-button prev">← Home</a>
         </div>
 
     </div>
