--- a/dnsPhotos.html
+++ b/dnsPhotos.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="nav-buttons">
-            <a href="index.html" class="nav-button prev">← Back to Projects</a>
+            <a href="index.html" class="nav-button prev">← Home</a>
         </div>
 
         </div>
