Adding profile photo

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="hero-image">
                         <div class="profile-photo">
-                            <img src="profile-photo.jpg" alt="Jason Schriner - Systems Engineer" />
+                            <img src="profile.png" alt="Jason Schriner - Systems Engineer" />
                             <div class="photo-border"></div>
                         </div>
                     </div>
