--- a/dns.html
+++ b/dns.html
@@ -135,6 +135,14 @@ curl -sSL https://install.pi-hole.net | bash
                 <p>Logged in with the password from installation and explored the dashboard.</p>
             </div>
         </section>
+ <section id="projects" class="section">
+            <div class="project-card">
+                <h2>Lessons Learned</h2>
+	          <p>I learned about...</p>
+                
+            </div>
+        </section>
+
 
         <div class="nav-buttons">
             <a href="index.html" class="nav-button prev">← Home</a>
