Fixing resume download format

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <a href="https://discord.gg/YjRXeKaERq" class="contact-link">
                             📝 Discord
                         </a>
-                       <a href="Jason_Schriner_Resume.pdf" download="resume.pdf">📄 Download Resume</a>
+                       <a href="Jason_Schriner_Resume.pdf" download="resume.pdf" class="contact-link">📄 Download Resume</a>
                     </div>
                 </div>
             </div>
