Adding photos to dns photo page

--- a/dnsPhotos.html
+++ b/dnsPhotos.html
@@ -27,16 +27,35 @@
 
         <div class="photo-gallery">
           <div class="photo-item">
-            <img src="photos/pi-setup.jpg" alt="Raspberry Pi DNS Server">
-            <p>Initial Raspberry Pi DNS Setup</p>
+            <img src="images/parts.jpg" alt="Raspberry Pi DNS Server">
+            <p>Parts Packaged Note I have the wrong SD card</p>
           </div>
           <div class="photo-item">
-            <img src="photos/pihole-ui.jpg" alt="Pi-hole Dashboard">
-            <p>Pi-hole Admin Dashboard</p>
+            <img src="images/allParts.jpg" alt="Pi-hole Dashboard">
+            <p>All Parts taken out of the Package</p>
           </div>
-          <!-- Add more photo-item blocks here -->
-        </div>
-
+         <div class="photo-item">
+            <img src="images/pi.jpg" alt="Pi-hole Dashboard">
+            <p>Raspberry Pi</p>
+          </div><div class="photo-item">
+            <img src="images/nvme.jpg" alt="Pi-hole Dashboard">
+            <p>NVME card mounted on board</p>
+          </div><div class="photo-item">
+            <img src="images/piMounted.jpg" alt="Pi-hole Dashboard">
+            <p>The raspberry pi mounted in the Pironman case</p>
+          </div>
+           <div class="photo-item">
+            <img src="images/piW_Radiator.jpg" alt="Pi-hole Dashboard">
+            <p>Mounted Radiator</p>
+          </div>
+          <div class="photo-item">
+            <img src="images/rad&mem.jpg" alt="Pi-hole Dashboard">
+            <p>Radiator and Memory installed Near complete build</p>
+          </div>
+          <div class="photo-item">
+            <img src="images/piInstaller.png" alt="Pi-hole Dashboard">
+            <p>Raspberry Pi Install Dashboard</p>
+          </div>
         <div class="nav-buttons">
             <a href="index.html" class="nav-button prev">← Home</a>
         </div>
